--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Goodbye World</title>
+    <title>Goodbye</title>
   </head>
   <body>
     <% name = "Joe" %>
