--- a/views/date.erb
+++ b/views/date.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello World</title>
+    <title>Date</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <p><%= Today %></p>
   </body>
 </html>
