--- a/views/date.erb
+++ b/views/date.erb
@@ -4,6 +4,7 @@
     <title>Date</title>
   </head>
   <body>
-    <p><%= Today %></p>
+    <% date = %>
+    <p><%= "The date is #{date}" %></p>
   </body>
 </html>
