--- a/views/date.erb
+++ b/views/date.erb
@@ -5,6 +5,6 @@
   </head>
   <body>
     <% date = Time.new %>
-    <p><%= "The date is #{date.day}, #{date.month} #{date.day}, #{date.year}" %></p>
+    <p><%= "The date is #{Time.new.}" %></p>
   </body>
 </html>
