--- a/views/date.erb
+++ b/views/date.erb
@@ -5,6 +5,6 @@
   </head>
   <body>
     <% date = Time.new %>
-    <p><%= "The date is #{Time.new.strftime("}" %></p>
+    <p><%= "The date is #{Time.new.strftime("%A}" %></p>
   </body>
 </html>
